--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </form>
     </div>
 
-    <h3 style="text-align: center; margin-top: 80px; margin-bottom: 30px;">Featured cars</h3>
+    <h3 style="text-align: center; margin-top: 80px; margin-bottom: 30px;">Available cars</h3>
 
     <div class="container overflow-hidden mb-4">
         <div class="row g-2">
