--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </form>
     </div>
 
-    <h3 style="text-align: center; margin-top: 80px; margin-bottom: 30px;">Available cars</h3>
+    <h3 style="text-align: center; margin-top: 80px; margin-bottom: 30px;">Featured cars</h3>
 
     <div class="container overflow-hidden mb-4">
         <div class="row g-2">
@@ -163,13 +163,13 @@
                 <div class="col-sm-3">
                     <div class="d-flex justify-content-evenly">
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/toyota2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
                         </div>
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/lexus2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
@@ -179,13 +179,13 @@
                 <div class="col-sm-3">
                     <div class="d-flex justify-content-evenly">
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/honda2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
                         </div>
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/merdeces2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
@@ -195,13 +195,13 @@
                 <div class="col-sm-3">
                     <div class="d-flex justify-content-evenly">
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/nissan2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
                         </div>
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/ford2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
@@ -211,13 +211,13 @@
                 <div class="col-sm-3">
                     <div class="d-flex justify-content-evenly">
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/land-rover2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
                         </div>
                         <div>
-                            <a href="" class="brand-link">
+                            <a href="" class="brand-link d-none d-md-block">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/acura.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
