--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     M</a></div>
             </div>
             <div class="row ps-md-5 pe-md-5 mt-2">
-                <div class="col-sm-3">
+                <div class="col-md-3 col-sm-4 d-sm-none">
                     <div class="d-flex justify-content-evenly">
                         <div>
                             <a href="" class="brand-link">
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 d-sm-none">
                     <div class="d-flex justify-content-evenly">
                         <div>
                             <a href="" class="brand-link">
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 d-sm-none">
                     <div class="d-flex justify-content-evenly">
                         <div>
                             <a href="" class="brand-link">
@@ -205,12 +205,6 @@
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/ford2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
                             </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="d-flex justify-content-evenly">
-                        <div>
                             <a href="" class="brand-link">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/land-rover2x.png" alt="">
                                 <p class="brand-label">Toyota</p>
