--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <div>
                             <a href="" class="brand-link">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/ford2x.png" alt="">
-                                <p class="brand-label">Toyota</p>
+                                <p class="brand-label">Toyotaa</p>
                             </a>
                             <a href="" class="brand-link">
                                 <img src="https://assets.jiji.ng/art/attributes/top-selection/cars2x-tinifield/land-rover2x.png" alt="">
