boot form completed

--- a/boot_form.html
+++ b/boot_form.html
@@ -10,23 +10,26 @@
   </style>
   <title>BootForm</title>
 </head>
-<body>
-  <div>
-    <h2>ACCOUNT LOGIN</h2>
-    <form class="container">
-      <div class="row">
-        <div class="col-12">
-          <input type="text" name="username" id="username" placeholder="username">
+<body class="d-flex justify-content-center align-items-center" style="width: 100vw; height: 100vh; background: linear-gradient(to bottom, skyblue, rgb(188, 222, 255));">
+  <div class="mx-auto"  style="width: 500px;">
+    <h3 class="text-white">ACCOUNT LOGIN</h3>
+    <form class="container bg-light rounded py-5">
+      <div class="row px-4">
+        <div class="col-12 mb-4">
+          <input type="text" name="username" id="username" class="w-100 text-muted" style="border: none; background-color: transparent; border-bottom: 1px solid rgb(155, 155, 155);" placeholder="User Name">
+        </div>
+        <div class="col-12 mb-4">
+          <input type="password"  name="password" id="password" class="w-100 text-muted" style="border: none; background-color: transparent; border-bottom: 1px solid rgb(155, 155, 155);" placeholder="Password">
+        </div>
+        <div class="col-12 mb-4 d-flex justify-content-between">
+          <div class="remember"><input type="checkbox"  id="remember"name="remember" id="remember">&nbsp; Remember me</div>
+          <div class="forgot text-primary">Forgot Password</div>
+        </div>
+        <div class="col-12 mb-4">
+          <button type="submit" class="w-100 btn btn-primary mx-auto mb-3">Login</button>
         </div>
         <div class="col-12">
-          <input type="password" name="password" id="password" placeholder="password">
-        </div>
-        <div class="col-12">
-          <div class="remember"><input type="checkbox" name="remember" id="remember">Remember me</div>
-          <div class="forgot">Forgot Password</div>
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary mb-3">Login</button>
+          <p class="text-center">Are you new? <span class="text-primary">Sign Up</span></p>
         </div>
       </div>
     </form>
