--- a/boot_form.html
+++ b/boot_form.html
@@ -10,7 +10,7 @@
   </style>
   <title>BootForm</title>
 </head>
-<body class="d-flex justify-content-center align-items-center" style="width: 100vw; height: 100vh; background: linear-gradient(to bottom, skyblue, rgb(188, 222, 255));">
+<body class="d-flex justify-content-center align-items-center" style="width: 100vw; height: 100vh; background: linear-gradient(to bottom, rgb(81, 160, 233), rgb(188, 222, 255));">
   <div class="mx-auto"  style="width: 500px;">
     <h3 class="text-white">ACCOUNT LOGIN</h3>
     <form class="container bg-light rounded py-5">
