--- a/boot_nav.html
+++ b/boot_nav.html
@@ -8,7 +8,7 @@
   <title>Boot Nav</title>
 </head>
 <body>
-  <ul class="nav nav-pills">
+  <ul class="nav nav-pills bg-warning">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
